--- a/styles.css
+++ b/styles.css
@@ -576,6 +576,7 @@ video {
 }
 
 .w-72 {
+  margin-bottom: 10%;
   width: 18rem;
 }
 
@@ -684,6 +685,7 @@ video {
   line-height: 1;
   color: #fff;
   font-weight: bold;
+  text-align: center;
 }
 
 .text-lg {
